application/views/scss/pages/_login.scss
$btn-focus-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);

.enter-page {
    height: 100%;
    position: relative;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;

    @include media-breakpoint-up(md) {
        //align-items: center;
    }

    .form-sign {
        flex: 1;
        padding: 0 2rem;
        padding-top: 2.5rem;
        margin: 0 auto;
        max-width: 500px;

        &-logo {
            margin: 0 auto;
            margin-bottom: 2.5rem;
            display: flex;
            justify-content: center;
        }
    }
}

.form-title {
    display: flex;
    align-items: center;
    justify-content: space-between;

    h2 {
        color: #000;
        font-weight: $font-weight-bold;
        font-size: calc(112.5% + 0.9vw);
    }
}

.or {
    position: relative;
    text-transform: uppercase;
    font-size: 11px;
    color: $txt-gray;
    margin: 30px 0;
    display: flex;
    text-align: center;

    &:after {
        content: "";
        height: 1px;
        width: 100%;
        background: $border-color;
        position: absolute;
        top: 50%;
        left: 0;
    }

    span {
        position: relative;
        z-index: 1;
        background: $bg-white;
        padding: 0 5px;
        letter-spacing: 2px;
        margin: 0 auto;
    }
}

.other-option {
    margin-top: 1.5rem;
}

.login-popup {
    padding: 1rem 2rem;

    .title {
        margin-bottom: 1.5rem;
    }
}

.login-wrapper {
    .form-side {
        padding: 2rem;

        @include media-breakpoint-down(md) {
            padding: 1rem;
        }

        input {
            &[type="submit"] {
                background: $secondary-color;
                color: $secondary-color-inverse;
                text-transform: uppercase;
                font-size: 1em;
                border: none;
                display: block;
                width: 100%;
            }
        }
    }

    .forgot {
        text-align: #{$end-direction};
        color: #fff;
        font-size: 0.9em;
        line-height: 1;
    }

    .last-button {
        background: none;
        color: #fff;
        text-transform: uppercase;
        font-size: 1em;
        border: solid 1px rgba(255, 255, 255, 0.2);
        display: block;
        padding: 10px 20px;
        text-align: center;
        line-height: 1.42857;
        width: 100%;

        &:hover,
        &:focus,
        &:active {
            background-color: #424242;
        }
    }

    .add-side {
        padding: 2rem;
        display: table-cell;
        max-width: 40%;
        flex: 0 0 40%;
        background: #fff url(../images/login-with.png) no-repeat bottom center;
    }
}

.connect {
    a {
        &.link {
            display: block;
            color: #fff;
            text-transform: uppercase;
            font-size: 1em;
            border: none;
            display: block;
            padding: 10px 20px;
            text-align: center;
            line-height: 1.42857;
            width: 100%;
            margin-bottom: 15px;
        }

        &.fb {
            background: #3856a0;
        }

        &.gp {
            background: #dd4330;
        }
    }

    .svg {
        width: 18px;
        height: 18px;
        fill: #fff;
        display: inline-block;
        vertical-align: middle;
    }
}

.forgot {
    text-align: #{$end-direction};
    font-size: 0.75em;
}

.otp-heading {
    display: flex !important;
    justify-content: space-between;
    align-items: center;
    flex: 1;
}

.card-sign {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;

    //border: $border;
    //border-radius: $common-radius;
    // box-shadow: $shadow1;
    //padding:2.3rem;
    &_head {
        margin-bottom: 2rem;
        text-align: center;

        .title {
            font-weight: $font-weight-bold;
            margin: 0;
            margin-bottom: 0.5rem;
            font-size: 1.125rem;
        }

        p {
            color: $txt-gray;
            font-size: 0.8rem;
        }
    }

    &_body {
        flex: 1;
    }

    &_foot {
        margin-top: 4rem;
        text-align: center;
        color: $txt-gray;

        a {
            font-size: 0.8rem;
            color: $brand-color;
            text-align: center;
        }
    }

    .link {
        font-size: 0.8rem;

        &:after {
            content: normal;
        }
    }
}

//forgot password

.more-links {
    display: flex;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    grid-gap: 1rem;
    padding-bottom: 1rem;
}

.other-links {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 0.8rem;
    margin-top: 2rem;

    li {
        margin: 0 0.5rem;
        font-weight: $font-weight-bold;
        color: $txt-gray;
    }
}

.forgot {
    text-align: #{$end-direction};
}

.buttons-list {
    margin-bottom: 1.5rem;
    display: flex;
    flex-flow: column wrap;
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;

    &-item {
        flex: 1;
        width: 100%;
        max-width: 310px;
    }

    &-link {
        background-color: #fff;
        color: rgba(0, 0, 0, 0.54);
        font-size: 14px;
        font-weight: $font-weight-bold;
        border-radius: 10px;
        border: $border;
        border-color: rgb(168, 168, 168);
        // box-shadow: 1px 1px 1px grey;
        padding: 0.4rem 1rem;
        display: flex;
        align-items: center;
        justify-content: center;

        &:hover,
        &:focus,
        &:active {
            color: rgba(0, 0, 0, 1);
            border-color: currentColor;
            text-decoration: none;
            box-shadow: $btn-hover-shadow;
            cursor: pointer;
        }

        &:focus {
            box-shadow: $btn-focus-shadow;
        }
    }

    &-wrap {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 0;
        width: 220px;
    }

    &-icon {
        $size: 40px;
        padding: 0;
        flex: 0 0 $size;
        max-width: $size;
        margin: 0;
        //background: rgba(0, 0, 0, 0.1);
        width: $size;
        height: $size;
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 50%;
    }

    img,
    .svg {
        margin: 0 auto;
        width: 30px;
        height: 30px;
    }

    .btn-fb,
    .btn-FacebookLogin {
        background: #3b5a99;
    }

    .btn-gp,
    .btn-GoogleLogin {
        background: #da4a42;
    }

    .btn-gm {
        background: #333333;
    }

    .btn-AppleLogin {
        background: #000000;
    }

    .btn-InstagramLogin {
        background: #3f729b;
    }
}

.form-sign-copyright{
    position: sticky;
    bottom: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
    font-size: 0.8rem;
    padding: 1.5rem;
}

